# wmt-staking-plutus-smart-contract

./: README.md  cabal.project  en-nft-registration.plutus  en-registration.cabal  wmt-staking-proof-of-execution_dummy.plutus  wmt-staking.cabal  wmt_staking_dummy.plutus
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  SECURITY.md
app/: Main.hs
scripts/: signed.tx  stake.sh  stake_datum.json  stake_redeemer.json  stake_unsigned_build.tx  stake_unsigned_build_raw.tx  unstake.sh  unstake_datum.json  unstake_redeemer_pol.json  unstake_unsigned_build.tx  unstake_unsigned_build_raw.tx  witness.tx  wmt-staking-proof-of-execution_dummy copy.plutus  wmt_staking_dummy copy.plutus
scripts/testkeys/: key.skey  key.vkey
src/: OffChain.hs  OnChain.hs  Types.hs
src/Pol/: OffChain.hs  OnChain.hs  Types.hs
src/Val/: OffChain.hs  OnChain.hs  Types.hs
