cabal-version:      2.4
name:               wmt-staking-lib
version:            1.0.0.0
author:             Torben Poguntke
maintainer:         torben.poguntke@worldmobile.io
Copyright:          © 2023 World Mobile Group
Build-Type:         Simple


extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  exposed-modules:     
                    Pol.Types
                    Pol.OnChain
                    Pol.OffChain
                    Val.Types
                    Val.OnChain
                    Val.OffChain
  build-depends:     
                      aeson
                    , base -any
                    , bytestring
                    , cardano-api
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-script-utils
                    , serialise
                    , containers
                    , text

  if !(impl(ghcjs) || os(ghcjs))
        build-depends: plutus-tx-plugin -any

  if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors


executable wmt-staking
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:     
                       aeson
                     , base -any
                     , bytestring
                     , containers
                     , plutus-tx
                     , cardano-api
                     , plutus-ledger
                     , plutus-ledger-api 
                     , plutus-script-utils
                     , plutus-chain-index-core
                     , cardano-ledger-shelley
                     , cardano-ledger-alonzo
                     , text
                     , serialise
                     , utf8-string
                     , word8
                     , wmt-staking-lib
                     
